infrastructure/adguard/namespace.yaml
# k3s-gitops/infrastructure/adguard/namespace.yaml
# ---
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: adguard
